# MineralApp

./: .gitignore  CMakeLists.txt  INSTALL.md  Info.plist  LICENSE  MANIFEST.in  Makefile  README.md  USAGE.md  make-deb.sh  mineralapp.sh  setup.py  version.in
icon/: README.md  make-icons.sh  mineralapp.icns
mineralapp/: mineralapp.py  version.py
msw/: README.md  mineralapp.nsi  mineralapp.rc  mineralapp.sln  mineralapp.vcxproj  mineralapp.vcxproj.filters  resource.h
share/applications/: mineralapp.desktop
src/: addmodframe.cpp  addmodframe.h  addtodb.cpp  addtodb.hpp  app.cpp  csv.cpp  csv.hpp  genreportframe.cpp  genreportframe.h  image.cpp  image.h  mainframe.cpp  mainframe.h  mineraldb.cpp  mineraldb.hpp  translation.cpp  translation.h  utils.cpp  utils.h  version.h
tools/: install-pip.sh  make-dmg.sh  make-manual.sh
